# mastermindAPI

./: .dockerignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  local.env
makefiles/: database.mk  development.mk  help.mk  tests.mk
scripts/: app-entrypoint.sh
src/api/: admin.py  constants.py  urls.py
src/api/managers/: game.py
src/api/migrations/: 0001_initial.py
src/api/models/: game.py  guess.py
src/api/views/: game.py
src/core/: settings.py  urls.py
